--- a/src/i18n/zh_cn.json
+++ b/src/i18n/zh_cn.json
@@ -4,8 +4,9 @@
     "run_existing_script": "运行现有脚本",
     "run_script_from_network": "从网络链接运行脚本",
     "change_language": "修改语言",
+    "change_version": "更换版本",
     "exit": "退出",
-    "prompt": "请输入您的选择 (1-4): "
+    "prompt": "请输入您的选择 (1-5): "
   },
   "language_menu": {
     "title": "=== 语言选择 ===",
@@ -40,6 +41,20 @@
   "link_script": {
     "failed_read": "读取 .link 文件失败：{}",
     "downloading": "正在从URL下载脚本：{}"
+  },
+  "update_menu": {
+    "title": "=== 版本更换 ===",
+    "latest": "最新正式版",
+    "latest_dev": "最新开发版",
+    "other": "其他版本",
+    "prompt": "请输入您的选择 (1-3): ",
+    "select_prompt": "请选择一个版本 (1-{}), 或输入 'exit' 返回：",
+    "downloading": "正在下载版本 {}...",
+    "not_found": "未找到适合此平台的构建。",
+    "no_release": "没有可用的正式版本。",
+    "download_failed": "下载文件失败：{}",
+    "replace_failed": "替换可执行文件失败：{}",
+    "success": "更新完成，请重新启动程序。"
   },
   "main": {
     "welcome": "- 这是一个Rust项目！-",
