--- a/src/i18n/en_us.json
+++ b/src/i18n/en_us.json
@@ -46,7 +46,7 @@
     "title": "=== Version Switch ===",
     "latest": "Latest release",
     "latest_dev": "Latest dev build",
-    "other": "Other versions",
+    "other": "Other versions(包含开发版)",
     "prompt": "Please enter your choice (1-3): ",
     "select_prompt": "Select a version (1-{}), or type 'exit' to return: ",
     "downloading": "Downloading version {}...",
@@ -57,7 +57,8 @@
     "success": "Update complete. Please restart the program."
   },
   "main": {
-    "welcome": "- Hey this a rust project! -",
+    "welcome": "---- Hey this a rust project for geek! ----",
+    "version_msg": "This build version is {}, see details on github.",
     "invalid_choice": "Invalid choice, please try again.",
     "invalid_language": "Invalid choice, language not changed.",
     "exit_message": "Exiting program. Goodbye!"
