--- a/src/i18n/zh_cn.json
+++ b/src/i18n/zh_cn.json
@@ -46,7 +46,7 @@
     "title": "=== 版本更换 ===",
     "latest": "最新正式版",
     "latest_dev": "最新开发版",
-    "other": "其他版本",
+    "other": "其他版本(包含开发版)",
     "prompt": "请输入您的选择 (1-3): ",
     "select_prompt": "请选择一个版本 (1-{}), 或输入 'exit' 返回：",
     "downloading": "正在下载版本 {}...",
@@ -57,7 +57,8 @@
     "success": "更新完成，请重新启动程序。"
   },
   "main": {
-    "welcome": "- 这是一个Rust项目！-",
+    "welcome": "---- 这是一个极客的Rust项目！----",
+    "version_msg": "=== 此构建版本为{},详情在github查看 ===",
     "invalid_choice": "无效的选择，请重试。",
     "invalid_language": "无效的选择，语言未更改。",
     "exit_message": "正在退出程序。再见！"
