--- a/src/i18n/en_us.json
+++ b/src/i18n/en_us.json
@@ -46,7 +46,7 @@
     "title": "=== Version Switch ===",
     "latest": "Latest release",
     "latest_dev": "Latest dev build",
-    "other": "Other versions(包含开发版)",
+    "other": "Other versions(and dev version)",
     "prompt": "Please enter your choice (1-3): ",
     "select_prompt": "Select a version (1-{}), or type 'exit' to return: ",
     "downloading": "Downloading version {}...",
@@ -58,7 +58,7 @@
   },
   "main": {
     "welcome": "---- Hey this a rust project for geek! ----",
-    "version_msg": "This build version is {}, see details on github.",
+    "version_msg": "This build version is {}, see details on https://github.com/{} please.",
     "invalid_choice": "Invalid choice, please try again.",
     "invalid_language": "Invalid choice, language not changed.",
     "exit_message": "Exiting program. Goodbye!"
