update i18n version message formatting for improved clarity

--- a/src/i18n/zh_cn.json
+++ b/src/i18n/zh_cn.json
@@ -58,7 +58,7 @@
   },
   "main": {
     "welcome": "---- 这是一个极客的Rust项目！----",
-    "version_msg": "=== 此构建版本为{},详情在 https://github.com/{} 查看 ===",
+    "version_msg": "=== 此构建版本为{},详情在 {} 查看 ===",
     "invalid_choice": "无效的选择，请重试。",
     "invalid_language": "无效的选择，语言未更改。",
     "exit_message": "正在退出程序。再见！"
