--- a/src/i18n/zh_cn.json
+++ b/src/i18n/zh_cn.json
@@ -100,11 +100,14 @@
   },
   "plugin_menu": {
     "title": "=== 插件管理 ===",
+    "marketplace": "插件市场管理",
+    "local_scan": "本地插件扫描",
     "install": "安装插件",
     "list": "查看插件列表",
     "uninstall": "卸载插件",
     "toggle": "启用/禁用插件",
     "back": "返回主菜单",
-    "prompt": "请输入您的选择 (1-5): "
+    "prompt": "请输入您的选择 (1-5): ",
+    "prompt_extended": "请输入您的选择 (1-7): "
   }
 }
