--- a/src/i18n/zh_cn.json
+++ b/src/i18n/zh_cn.json
@@ -16,6 +16,7 @@
     "change_version": "更换版本",
     "clear_personalization": "清理个性化",
     "clear_success": "个性化设置已成功清理！请重新打开此程序",
+    "language_saved": "语言设置已保存！",
     "back": "返回主菜单",
     "prompt": "请输入您的选择 (1-4): "
   },
@@ -26,32 +27,32 @@
     "prompt": "请输入您的选择 (1-2): "
   },
   "script_execution": {
-    "failed_read_info": "读取 info.json 失败：{}",
-    "invalid_json": "info.json 格式错误：{}",
+    "failed_read_info": "读取 info.json 失败：{0}",
+    "invalid_json": "info.json 格式错误：{0}",
     "no_scripts": "没有可用脚本。",
     "available_scripts": "可用脚本：",
-    "run_prompt": "输入要运行的脚本编号 (1-{})，或输入 'exit' 返回：",
+    "run_prompt": "输入要运行的脚本编号 (1-{0})，或输入 'exit' 返回：",
     "returning": "返回主菜单。",
-    "running_script": "正在运行脚本 `{}`…",
-    "invalid_choice": "无效的选择，请输入 1 到 {} 之间的数字。"
+    "running_script": "正在运行脚本 `{0}`…",
+    "invalid_choice": "无效的选择，请输入 1 到 {0} 之间的数字。"
   },
   "url_script": {
     "enter_url": "输入脚本的URL（或输入 'exit' 返回）：",
-    "script_content": "来自 {} 的脚本内容：\n{}",
+    "script_content": "来自 {0} 的脚本内容：\n{1}",
     "executing": "正在执行脚本...",
-    "failed_create_temp": "创建临时文件失败：{}",
-    "failed_write": "写入脚本到文件失败：{}",
-    "failed_executable": "设置脚本可执行权限失败：{}",
+    "failed_create_temp": "创建临时文件失败：{0}",
+    "failed_write": "写入脚本到文件失败：{0}",
+    "failed_executable": "设置脚本可执行权限失败：{0}",
     "success": "脚本执行成功！",
-    "failed_status": "脚本执行失败，状态码：{}",
-    "failed_execute": "执行脚本失败：{}",
-    "failed_remove_temp": "警告：删除临时文件失败：{}",
-    "failed_read_content": "读取脚本内容失败：{}",
-    "failed_fetch": "从URL获取脚本失败：{}"
+    "failed_status": "脚本执行失败，状态码：{0}",
+    "failed_execute": "执行脚本失败：{0}",
+    "failed_remove_temp": "警告：删除临时文件失败：{0}",
+    "failed_read_content": "读取脚本内容失败：{0}",
+    "failed_fetch": "从URL获取脚本失败：{0}"
   },
   "link_script": {
-    "failed_read": "读取 .link 文件失败：{}",
-    "downloading": "正在从URL下载脚本：{}"
+    "failed_read": "读取 .link 文件失败：{0}",
+    "downloading": "正在从URL下载脚本：{0}"
   },
   "update_menu": {
     "title": "=== 版本更换 ===",
@@ -59,12 +60,12 @@
     "latest_dev": "最新开发版",
     "other": "其他版本(包含开发版)",
     "prompt": "请输入您的选择 (1-3): ",
-    "select_prompt": "请选择一个版本 (1-{}), 或输入 'exit' 返回：",
-    "downloading": "正在下载版本 {}...",
+    "select_prompt": "请选择一个版本 (1-{0}), 或输入 'exit' 返回：",
+    "downloading": "正在下载版本 {0}...",
     "not_found": "未找到适合此平台的构建。",
     "no_release": "没有可用的正式版本。",
-    "download_failed": "下载文件失败：{}",
-    "replace_failed": "替换可执行文件失败：{}",
+    "download_failed": "下载文件失败：{0}",
+    "replace_failed": "替换可执行文件失败：{0}",
     "success": "更新完成，请重新启动程序。"
   },
   "main": {
