Add marketplace config for geektools, fix i18n

--- a/src/i18n/en_us.json
+++ b/src/i18n/en_us.json
@@ -111,6 +111,76 @@
     "prompt": "Please enter your choice (1-5): ",
     "prompt_extended": "Please enter your choice (1-7): "
   },
+  "marketplace_menu": {
+    "title": "=== Plugin Marketplace Management ===",
+    "configure": "Configure Market URL and Port",
+    "browse": "Browse Plugin Marketplace",
+    "search": "Search Plugins",
+    "test_connection": "Test Connection",
+    "scan_local": "Scan Local Plugins",
+    "back": "Back to Plugin Management",
+    "prompt": "Please enter your choice (1-6): "
+  },
+  "marketplace_config": {
+    "title": "=== Configure Plugin Marketplace ===",
+    "current_config": "Current configuration:",
+    "url_label": "  URL: {0}",
+    "port_label": "  Port: {0}",
+    "timeout_label": "  Timeout: {0}s",
+    "url_prompt": "Enter API server URL (leave empty to keep current): ",
+    "port_prompt": "Enter API port (leave empty to keep current, default 443): ",
+    "timeout_prompt": "Enter timeout seconds (leave empty to keep current): ",
+    "invalid_port": "❌ Invalid port number, keeping current value",
+    "invalid_timeout": "❌ Invalid timeout value, keeping current value",
+    "save_success": "✅ Market configuration saved",
+    "new_config": "New configuration: {0}:{1}",
+    "save_failed": "❌ Failed to save configuration: {0}",
+    "testing_connection": "\nTesting connection to {0}:{1}...",
+    "connection_success": "✅ Connection test successful!",
+    "connection_failed": "❌ Connection test failed: {0}"
+  },
+  "marketplace_browse": {
+    "fetching": "Fetching plugin list...",
+    "page_info": "\n=== Plugin Marketplace (Page {0}/{1}, Total {2} plugins) ===",
+    "no_plugins": "No plugins found.",
+    "plugin_info": "{0}. {1} v{2}",
+    "plugin_details": "   Author: {0} | Downloads: {1} | Rating: {2}",
+    "plugin_description": "   Description: {0}",
+    "download_prompt": "Enter plugin number to download (1-{0}), 'n' for next page, 'p' for previous page, or 'exit' to quit: ",
+    "first_page": "Already on first page",
+    "last_page": "Already on last page",
+    "invalid_choice": "Invalid choice",
+    "downloading": "Downloading plugin: {0}",
+    "download_success": "✅ Plugin downloaded successfully! Saved to: {0}",
+    "download_failed": "❌ Plugin download failed: {0}",
+    "fetch_failed": "❌ Failed to fetch plugin list: {0}"
+  },
+  "marketplace_search": {
+    "query_prompt": "Enter search keywords (or 'exit' to quit): ",
+    "searching": "Searching for: {0}",
+    "results_found": "\nFound {0} search results:",
+    "no_results": "No matching plugins found.",
+    "search_failed": "❌ Search failed: {0}"
+  },
+  "local_plugin_scan": {
+    "title": "=== Local Plugin Scan ===",
+    "scanning": "Scanning local directories for plugin files...",
+    "no_plugins_found": "❌ No plugin files found",
+    "scan_directories": "Scan directories include: ~/Downloads, ~/Desktop, ~/Documents, current directory",
+    "file_format_info": "Please ensure plugin files are in .tar.gz format",
+    "plugins_found": "🔍 Found {0} potential plugin files:",
+    "plugin_path": "   Path: {0}",
+    "plugin_size": "   Size: {0} bytes",
+    "plugin_modified": "   Modified: {0}",
+    "plugin_estimated_name": "   Estimated name: {0}",
+    "plugin_estimated_version": "   Estimated version: {0}",
+    "install_prompt": "Enter plugin number to install (1-{0}), or 'exit' to return: ",
+    "installing": "Installing plugin: {0}",
+    "install_success": "✅ Plugin installed successfully! Plugin ID: {0}",
+    "install_failed": "❌ Plugin installation failed: {0}",
+    "invalid_choice": "❌ Invalid choice",
+    "invalid_input": "❌ Invalid input"
+  },
   "error": {
     "file_operation": "File operation failed: {path}",
     "network": "Network request failed: {url}",
