--- a/src/i18n/zh_cn.json
+++ b/src/i18n/zh_cn.json
@@ -111,6 +111,76 @@
     "prompt": "请输入您的选择 (1-5): ",
     "prompt_extended": "请输入您的选择 (1-7): "
   },
+  "marketplace_menu": {
+    "title": "=== 插件市场管理 ===",
+    "configure": "配置市场URL和端口",
+    "browse": "浏览插件市场",
+    "search": "搜索插件",
+    "test_connection": "测试连接",
+    "scan_local": "扫描本地插件",
+    "back": "返回插件管理",
+    "prompt": "请输入您的选择 (1-6): "
+  },
+  "marketplace_config": {
+    "title": "=== 配置插件市场 ===",
+    "current_config": "当前配置：",
+    "url_label": "  URL: {0}",
+    "port_label": "  端口: {0}",
+    "timeout_label": "  超时: {0}秒",
+    "url_prompt": "输入API服务器URL (留空保持当前值): ",
+    "port_prompt": "输入API端口 (留空保持当前值，默认443): ",
+    "timeout_prompt": "输入超时时间(秒) (留空保持当前值): ",
+    "invalid_port": "❌ 无效的端口号，保持原值",
+    "invalid_timeout": "❌ 无效的超时时间，保持原值",
+    "save_success": "✅ 市场配置已保存",
+    "new_config": "新配置: {0}:{1}",
+    "save_failed": "❌ 保存配置失败: {0}",
+    "testing_connection": "\n正在测试连接到 {0}:{1}...",
+    "connection_success": "✅ 连接测试成功！",
+    "connection_failed": "❌ 连接测试失败: {0}"
+  },
+  "marketplace_browse": {
+    "fetching": "正在获取插件列表...",
+    "page_info": "\n=== 插件市场 (第{0}页/共{1}页，总计{2}个插件) ===",
+    "no_plugins": "没有找到插件。",
+    "plugin_info": "{0}. {1} v{2}",
+    "plugin_details": "   作者: {0} | 下载: {1} | 评分: {2}",
+    "plugin_description": "   描述: {0}",
+    "download_prompt": "输入插件编号下载 (1-{0}), 输入 'n' 下一页, 输入 'p' 上一页, 或 'exit' 退出: ",
+    "first_page": "已经是第一页",
+    "last_page": "已经是最后一页",
+    "invalid_choice": "无效选择",
+    "downloading": "正在下载插件: {0}",
+    "download_success": "✅ 插件下载成功！保存位置: {0}",
+    "download_failed": "❌ 插件下载失败: {0}",
+    "fetch_failed": "❌ 获取插件列表失败: {0}"
+  },
+  "marketplace_search": {
+    "query_prompt": "输入搜索关键词 (或 'exit' 退出): ",
+    "searching": "正在搜索: {0}",
+    "results_found": "\n找到 {0} 个搜索结果:",
+    "no_results": "没有找到匹配的插件。",
+    "search_failed": "❌ 搜索失败: {0}"
+  },
+  "local_plugin_scan": {
+    "title": "=== 本地插件扫描 ===",
+    "scanning": "正在扫描本地目录中的插件文件...",
+    "no_plugins_found": "❌ 未找到任何插件文件",
+    "scan_directories": "扫描目录包括: ~/Downloads, ~/Desktop, ~/Documents, 当前目录",
+    "file_format_info": "请确保插件文件为 .tar.gz 格式",
+    "plugins_found": "🔍 找到 {0} 个潜在的插件文件:",
+    "plugin_path": "   路径: {0}",
+    "plugin_size": "   大小: {0} 字节",
+    "plugin_modified": "   修改时间: {0}",
+    "plugin_estimated_name": "   推测名称: {0}",
+    "plugin_estimated_version": "   推测版本: {0}",
+    "install_prompt": "输入要安装的插件编号 (1-{0}), 或输入 'exit' 返回: ",
+    "installing": "正在安装插件: {0}",
+    "install_success": "✅ 插件安装成功！插件 ID: {0}",
+    "install_failed": "❌ 插件安装失败: {0}",
+    "invalid_choice": "❌ 无效的选择",
+    "invalid_input": "❌ 无效的输入"
+  },
   "error": {
     "file_operation": "文件操作失败：{path}",
     "network": "网络请求失败：{url}",
